<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">CallerInfo</string>
    <string name="text_normal">%1$s %2$s %3$s</string>
    <string name="text_poi">%1$s %2$s %3$s %4$s</string>
    <string name="text_report">%1$s %2$s %3$s, tagged by %4$d users as %5$s</string>
    <string name="close_float_window">Tap to hide the float window</string>
    <string name="action_settings">Settings</string>
    <string name="action_float_window">Float window position</string>
    <string name="float_window_hint">Drag to move</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search phone number&#8230;</string>
    <string name="no_history">No incoming call log</string>
    <string name="unknown">No data</string>
    <string name="loading">Loading&#8230;</string>
    <string name="loading_error">Loading failed</string>
    <string name="color">Color</string>
    <string name="color_normal">Normal number</string>
    <string name="color_poi">Business number</string>
    <string name="color_report">Reported number</string>
    <string name="about">About</string>
    <string name="author" tools:ignore="UnusedResources">Author</string>
    <string name="version">Version</string>
    <string name="license">License</string>
    <string name="developer">Developer</string>
    <string name="developer_summary" translatable="false">tianyu &lt;xdtianyu@gmail.com&gt;</string>
    <string name="eula_message">CallerInfo uses third party service to query caller
        information. It means that the caller\'s number and any number you search will be sent to
        third party service provider. Please note that this is not linked to your own phone number or other
        personal information.
    </string>
    <string name="eula_title">Use Online Phone Number Service?</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="project_url" translatable="false">https://github.com/xdtianyu/CallerInfo</string>
    <string name="project_title">Open source project</string>
    <string name="app_package_name" translatable="false" tools:ignore="UnusedResources">
        org.xdty.callerinfo
    </string>
    <string name="advanced">Advanced</string>
    <string name="custom_bd_api_key">Custom BAIDU API key</string>
    <string name="custom_jh_api_key">Custom JUHE API key</string>
    <string name="float_window">Float window</string>
    <string name="window_transparent">Transparency</string>
    <string name="window_text_size">Font size</string>
    <string name="window_close_anim">Animation on hide</string>
    <string name="text_size">Drag to change font size.</string>
    <string name="text_transparent">Drag to change transparency.</string>
    <string name="window_trans_back_only">Transparency only applies for background</string>
    <string name="close_window">Hide float window</string>
    <string name="undo">undo</string>
    <string name="deleted">Deleted</string>
    <string name="api_type">Data source</string>
    <string name="api_baidu">BAIDU Phone Number Service</string>
    <string name="api_juhe">JUHE Phone Service (360)</string>
    <string name="api_sogou">SOGOU Phone Number Service</string>
    <string name="ignore_known_contact">Ignore calls from contact list</string>
    <string name="display_on_outgoing">Show on outgoing calls</string>
    <string name="fetch">Fetch</string>
    <string name="baidu_api_url" translatable="false">http://apistore.baidu.com/astore/usercenter
    </string>
    <string name="juhe_api_url" translatable="false">https://www.juhe.cn/docs/api/id/72</string>
    <string name="catch_crash">Report crashes</string>
    <string name="catch_crash_message">This feature allows the app to report technical details to
        the developer after crash. Please notice that it is not necessary to enable this if you
        downloaded the app from Play Store, you only need to tap on "Report" button after crash.
    </string>
    <string name="customactivityoncrash_error_activity_close_app">Close app</string>
    <string name="customactivityoncrash_error_activity_error_details">Error details</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">Error
        information
    </string>
    <string name="customactivityoncrash_error_activity_error_details_close">Close</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">Copied to clipboard
    </string>
    <string name="customactivityoncrash_error_activity_error_details_copy">Copy to clipboard
    </string>
    <string name="customactivityoncrash_error_activity_error_details_title">Error details</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">An unexpected
        error occurred.\nSorry for the inconvenience.
    </string>
    <string name="customactivityoncrash_error_activity_restart_app">Restart app</string>
    <string name="customactivityoncrash_error_activity_unknown_exception">Unknown exception</string>
    <string name="show_hidden_toast">Tap %1$d more times to show hidden settings</string>
    <string name="force_chinese">Use Chinese as app language</string>
    <string name="hide_when_off_hook">Hide after accepting</string>
    <string name="custom_api_url" translatable="false">custom_api_url</string>
    <string name="custom_api">Custom API</string>
    <string name="document">Document</string>
    <string name="api_document_url" translatable="false">
        https://github.com/xdtianyu/PhoneNumber/blob/master/CUSTOM.md
    </string>
    <string name="api_url_hint">API URL</string>
    <string name="api_key_hint">API key</string>
    <string name="hide_when_touch">Hide on tap</string>
    <string name="only_offline">Only use offline database</string>
    <string name="contact_offline">Show contact location when offline</string>
    <string name="online_failed">Online fetch failed</string>
    <string name="offline_failed">Number not found in offline data</string>
    <string name="window_visibility">Show and hide</string>
    <string name="custom_data">Custom data source</string>
    <string name="plugin">Plugin</string>
    <string name="auto_hangup">Call block</string>
    <string name="add_call_log">Add number info to call log</string>
    <string name="plugin_package_name" translatable="false">org.xdty.callerinfo.plugin</string>
    <string name="plugin_not_started">Plugin service not started, please check auto-run permission
    </string>
    <string name="hangup_keyword">Call block keywords</string>
    <string name="hangup_keyword_summary">Hangup when caller info contains keyword</string>
    <string name="hangup_keyword_hint">Please split keywords with space</string>
    <string name="hangup_keyword_default" translatable="false">诈骗 广告 骚扰</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_clear_history">Clear call log</string>
    <string name="clear_history_message">Clear all call logs?</string>
    <string name="ring_once">Ring once</string>
    <string name="hangup_geo_keyword_summary">Hangup when caller geo location contains keyword
    </string>
    <string name="hangup_geo_keyword">Call block geo location keywords</string>
    <string name="hangup_number_keyword_summary">Hangup when caller number start with keywords
    </string>
    <string name="hangup_number_keyword">Call block number start with keywords</string>
    <string name="empty_string" translatable="false" />
    <string name="baidu_advertising" translatable="false">百度糯米</string>
    <string name="window_text_alignment">Window text alignment</string>
    <string name="align_left">Align left</string>
    <string name="align_center">Align center</string>
    <string name="align_right">Align right</string>
    <string name="window_height">Window height</string>
    <string name="window_height_message">Drag to change window height.</string>
    <string name="window_text_style">Text style</string>
    <string name="window_text_color">Enable text color</string>
    <string name="ignore_regex">Ignore number range</string>
    <string name="ignore_regex_hint">Please split keywords with space</string>
    <string name="example">Example</string>
    <string name="regex_example">Match a number with a star(*), split ranges with a space, To match
        \"1000–19999\", please enter \"1*** 1****\", to match \"550–579\", please enter \"55* 56*
        57*\"
    </string>
    <string name="window_text_padding">Window text padding</string>
    <string name="text_padding">Drag to change text padding.</string>
    <string name="icon">Icon</string>
    <string name="action_bar_up_description">Navigate up</string>
    <string name="disable_notify">Disable notification</string>
    <string name="disable_move">Disable move</string>
    <string name="readable_second">%1$d s</string>
    <string name="readable_minute">%1$02d m %2$02d s</string>
    <string name="readable_hour">%1$02d:%2$02d:%3$02d</string>
    <string name="readable_today">Today</string>
    <string name="readable_yesterday">Yesterday</string>
    <string name="readable_date">MM/dd/yyyy</string>
    <string name="about_more">More</string>
    <string name="privacy_notice">Privacy notice</string>
    <string name="feature_notice">Feature notice</string>
    <string name="mark">Mark</string>
    <string name="number">Number</string>
    <string name="mark_window">Mark window</string>
    <string name="searching">Searching, please wait a second</string>
    <string name="auto_report">Auto report</string>
    <string name="auto_report_summary">Auto report third party result.</string>
    <string name="enable_marking">Enable custom marking</string>
    <string name="enable_marking_summary">Show mark dialog when phone answered and failed to search</string>
    <string name="mark_number">Mark number</string>
    <string name="harassment">Harassment</string>
    <string name="fraud">Fraud</string>
    <string name="advertising">Advertising</string>
    <string name="express_delivery">Express delivery</string>
    <string name="restaurant_deliver">Restaurant deliver</string>
    <string name="type_harassment" translatable="false">骚扰</string>
    <string name="type_fraud" translatable="false">诈骗|欺诈</string>
    <string name="type_advertising" translatable="false">广告|推销</string>
    <string name="type_express_delivery" translatable="false">快递</string>
    <string name="type_restaurant_deliver" translatable="false">外卖</string>
    <string name="import_summary">Import history data and settings from external storage</string>
    <string name="import_data">Import data and settings</string>
    <string name="export_summary">Export history data and settings to external storage</string>
    <string name="export_data">Export data and settings</string>
    <string name="plugin_too_old">Feature is not supported by current plugin, please update to the latest.</string>
    <string name="storage_permission_failed">Plugin has no to writie external storage permission.</string>
    <string name="export_failed">Export failed.\n\n %1$s</string>
    <string name="export_succeed">Exported to file\n\n %1$s</string>
    <string name="import_failed">Import failed.\n\n %1$s</string>
    <string name="import_succeed">Import succeed.</string>
    <string name="phone_number">Phone number</string>
    <string name="description">Short description</string>
    <string name="number_appeal_description">You can report the wrong number by the number appeal function. The inspector will remove the number in the cloud data after confirming that the number is wrong.</string>
    <string name="number_appeal_prompt">Submitting data requires authorization from 🔐 id.xdty.org, and you are advised to log in using your social account.</string>
</resources>